# lviz

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: FetchFennel.cmake  FetchFonts.cmake  FetchFreeType.cmake  FetchGLFW.cmake  FetchGLM.cmake  FetchImGui.cmake  FetchLuaJIT.cmake
example/: canton.lua  cube.lua  labels.lua
runtime/lua/_meta/: appl.lua  canvas.lua  glm.lua  gp.lua  ui.lua  view3d.lua
scripts/: format.ps1  format.sh
src/: CMakeLists.txt  main.cpp
src/app/: application.cpp  application.h
src/appl/: application.cpp  application.h  extension.cpp  extension.h  extension_manager.cpp  extension_manager.h  log_stream.cpp  log_stream.h  state.cpp  state.h
src/bind/: appl.cpp  bind.h  canvas.cpp  extension.cpp  extension_manager.cpp  glm.cpp  glm.h  gp.cpp  io.cpp  ui.cpp  view3d.cpp  view3d.h
src/canvas/: camera.cpp  camera.h  circle.cpp  circle.h  curve.cpp  curve.h  ellipse.cpp  ellipse.h  geometry.h  grid.cpp  grid.h  handle.h  label.cpp  label.h  light.cpp  light.h  line.cpp  line.h  material.cpp  material.h  math.h  object.cpp  object.h  point.cpp  point.h  polyline.cpp  polyline.h  presentable.h  surface.cpp  surface.h  triangle.cpp  triangle.h  triangulation.cpp  triangulation.h  trimmed_curve.cpp  trimmed_curve.h  util.h  vertex.cpp  vertex.h  vertex_with_normal.cpp  (+1 more)
src/context/: context.cpp  context.h  gl_context.cpp  gl_context.h  ui_context.cpp  ui_context.h
src/gp/: ax1.cpp  ax1.h  ax2.cpp  ax2.h  box.cpp  box.h  glm.cpp  glm.h  util.h  xyz.cpp  xyz.h
src/rc/: Info.plist  lviz.rc
src/render/: context.cpp  context.h  gl_context.cpp  gl_context.h  gl_frame_buffer.cpp  gl_frame_buffer.h  gl_vertex_array_buffer.cpp  gl_vertex_array_buffer.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h  gl_vertex_buffer_layout.h  gl_vertex_index_buffer.cpp  gl_vertex_index_buffer.h  shader.cpp  shader.h  ui_context.cpp  ui_context.h
src/text/: character.h  font_atlas.cpp  font_atlas.h
src/ui/: frame.cpp  frame.h  input.h  log.cpp  log.h  panel.cpp  panel.h  view3d.cpp  view3d.h  viewport.cpp  viewport.h
src/util/: app_path.cpp  app_path.h  math.h  scope_guard.h  span.h
src/view/: camera.h  context.cpp  context.h
src/window/: gl_window.cpp  gl_window.h  window.cpp  window.h
